# msckf_slam

./: .gitignore  CMakeLists.txt  README.md
config/: euroc_config.yaml
include/: System.h  cam_state.h  feature.hpp  image_processor.h  imu_state.h  math_utils.hpp  msckf_vio.h  parameters.h
src/: System.cpp  image_processor.cpp  msckf_vio.cpp  parameters.cpp
test/: run_test.cpp
